# Gomokrust

./: .gitignore  Cargo.toml
neural_network/: main.py
neural_network/conf/: config.yaml
neural_network/src/: lit_model.py  training_pipeline.py
neural_network/src/utils/: __init__.py  data.py  models.py
src/: board.rs  game.rs  main.rs  mcts.rs  utils.rs
