[package]
name = "Gomokrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.1"
rand = "0.8.5"
serde_json = "1.0"
ndarray = "0.15.6"
itertools = "0.10.5"
rayon = "1.5.3"
tract-onnx = "0.18.3"
tract-core = "0.3.3"
tch = "0.9.0"

[dependencies.uuid]
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
